fix error: center title

--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                 <div>
                     <h1>Piano</h1>
                     <p>
-                        I play piano since I was 5.
+                        I have played piano since I was 5.
                         I love to play it. 
                         My favorite composers are Chopin and Bach.
                     </p>
