--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             <p>
                 Hi, I'm <b style='font-size:30pt'>Jai Hyun Park</b>.
                 I live in <b style='font-size:22pt'>Seoul</b>, Republic of Korea.
-                I love spending time on <b>playing piano</b>, <b>programming</b>, and <b style='font-size:25pt'>goofing around</b>.
+                I love spending time on <b style='font-size:25pt'>playing piano</b> and <b style='font-size:28pt'>programming</b style='font-size:28pt'>.
                 My favorite movie is 'Eternal Sunshine of the Spotless Mind'.
             </p>
 
@@ -89,25 +89,15 @@
                         <li style='text-align:left;font-family:"noto-eng","noto-kor";margin-bottom:15px;font-size:14pt'>
                             My first programming language is Java, the most familiar one is C, and the most tempting one is Haskel.
                         </li>
-                        <li style='text-align:left;font-family:"noto-eng","noto-kor";margin-bottom:15px;font-size:14pt'>
-                            My favorite movie is 'Eternal Sunshine of the Spotless Mind'.
-                        </li>
-                        <li style='text-align:left;font-family:"noto-eng","noto-kor";margin-bottom:15px;font-size:14pt'>
-                            When I was 15, I learned that "1/1 - 1/2 + 1/3 - .." converges to 'some value', 
-                            and I was dying to find it. 
-                            I spent more than a month and finally got the value with a proof by myself.
-                        </li>
-
                     </ul>
                 </div>
-        
             </div>
 
         </section>            
 
         <section class = '_track _content-section _article-section' id='stories' style='background-color:rgba(255,255,164,0.3)'>
-            <h1>More about me</h1>
-            <hr>
+            <!-- <h1>More about me</h1> -->
+            <hr style='border:none;background:none;padding-top:20px'>
 
             <div class='flex_r-block story wider-piece' id='story7'>
                 <div>
@@ -137,6 +127,7 @@
                 </div>
             </div>
 
+
             <div class='flex-block story wider-piece _track' id='story3'>
                 <div>
                     <img src='assets/imgs/20180916_120526-min.jpg'/>
@@ -145,8 +136,8 @@
                     <h1>Piano</h1>
                     <p>
                         I have played piano since I was 5.
-                        I love to play it. 
                         My favorite composers are Chopin and Bach.
+                        One of dreams is to compose my own song.
                     </p>
                 </div>
             </div>
@@ -164,6 +155,8 @@
                     </p>
                 </div>
             </div>
+
+
             <div class='flex_r-block story wider-piece _track' id='story2'>
                 <div>
                     <img src='assets/imgs/20180922_180827-min.jpg'/>
