--- a/posts.html
+++ b/posts.html
@@ -27,7 +27,7 @@
                 POSTS
             </a>
             <p>
-                Sorry, I do not have any post yet.
+                What's in my mind?
             </p>
         </adiv>
 
@@ -52,14 +52,15 @@
             </div>
             <p style='width:100%;font-family:"noto-eng","noto-kor";font-size:12pt'>See more posts at <a href='posts.html'>HERE</a></p>
         </section> -->
-        <section class='_track post-section big-piece' style='padding:50px 0px;margin:0px auto'>
+        <section class='_track post-section wide-piece' style='padding:50px 0px;margin:0px auto'>
             <div class='load-slice-posts' id='all-posts'>
                 <ul class='load-posts' style='border-top:1pt gray solid;border-bottom:1pt solid gray;padding:10px 0px'>
-                    <li src='posts/site-manual.html'><p class='load-post-title'></p><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='load-post-abstract'></p><a class='post-link'>..More</a></li>
-                    <li src='posts/post-sample.html'><p class='load-post-title'></p><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='load-post-abstract'></p><a class='post-link'>..More</a></li>
+                    <li id='posts/he-clustering.html' class='_track'><a class='post-link'><p class='load-post-title'></p></a><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='load-post-abstract'></p><p class='show-post-body'>..More</p><div class='load-post-body big-piece'></div><div class='load-post-body-after'><p class='hide-post-body'>Hide</p><a class='post-link'>Go to the post</a></div></li>
+                    <li id='posts/personal-page.html' class='_track'><a class='post-link'><p class='load-post-title'></p></a><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='load-post-abstract'></p><p class='show-post-body'>..More</p><div class='load-post-body big-piece'></div><div class='load-post-body-after'><p class='hide-post-body'>Hide</p><a class='post-link'>Go to the post</a></div></li>
                 </ul>
                 <div><div class='first'>≪</div><div class='prev'>＜</div><div class='number'>1/</div><div class='next'>＞</div><div class='last'>≫</div></div>
             </div>
+            <p style='margin-top:50px;font-family:"noto-eng","noto-kor";margin-bottom:0px'>See tags <a href='/tags.html'>HERE</a></p>
         </section>
 
 
