--- a/tags.html
+++ b/tags.html
@@ -30,10 +30,18 @@
 
             <div style='background-color: rgba(24,24,32,0.9);margin-top:20px;padding:15px;border-radius:10px' id='all-tags'>
                 <ul class='post-keywords'>
-                    <li class='post-keyword'><a href='tags.html#personal' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
-                        personal</a></li>
-                    <li class='post-keyword'><a href='tags.html#page-manual' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
-                        page-manual</a></li>
+                    <li class='post-keyword'><a href='tags.html#clustering' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                        clustering</a></li>
+                    <li class='post-keyword'><a href='tags.html#cryptography' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                        cryptography</a></li>
+                    <li class='post-keyword'><a href='tags.html#HE' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                        HE</a></li>
+                    <li class='post-keyword'><a href='tags.html#homepage' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                        homepage</a></li>
+                    <li class='post-keyword'><a href='tags.html#jquery' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                        jquery</a></li>
+                    <li class='post-keyword'><a href='tags.html#programming' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                        programming</a></li>
                 </ul>
             </div>
     
@@ -48,22 +56,48 @@
         <div class='section-updown'><div class='section-up'>∧</div><div class='section-top'></div><div class='section-down'>∨</div></div>
         <hr style='border:none!important'>
 
-
-        <section class='_track narrow-piece load-tagged-posts' id='personal'>
-            <h1>personal</h1>
+        <section class='_track narrow-piece load-tagged-posts' id='clustering'>
+            <h1>clustering</h1>
             <ul class='load-all-posts load-posts' style='margin-top:20px'>
-                <li src='posts/site-manual.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
-                <li src='posts/post-sample.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+                <li src='posts/he-clustering.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
             </ul>
         </section>
 
-        <section class='_track narrow-piece load-tagged-posts' id='page-manual'>
-            <h1>page-manual</h1>
+        <section class='_track narrow-piece load-tagged-posts' id='cryptography'>
+            <h1>cryptography</h1>
             <ul class='load-all-posts load-posts' style='margin-top:20px'>
-                <li src='posts/site-manual.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
-                <li src='posts/post-sample.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+                <li src='posts/he-clustering.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
             </ul>
         </section>
+
+        <section class='_track narrow-piece load-tagged-posts' id='HE'>
+            <h1>HE</h1>
+            <ul class='load-all-posts load-posts' style='margin-top:20px'>
+                <li src='posts/he-clustering.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+            </ul>
+        </section>
+
+        <section class='_track narrow-piece load-tagged-posts' id='homepage'>
+            <h1>homepage</h1>
+            <ul class='load-all-posts load-posts' style='margin-top:20px'>
+                <li src='posts/personal-page.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+            </ul>
+        </section>
+
+        <section class='_track narrow-piece load-tagged-posts' id='jquery'>
+            <h1>jquery</h1>
+            <ul class='load-all-posts load-posts' style='margin-top:20px'>
+                <li src='posts/personal-page.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+            </ul>
+        </section>
+
+        <section class='_track narrow-piece load-tagged-posts' id='programming'>
+            <h1>programming</h1>
+            <ul class='load-all-posts load-posts' style='margin-top:20px'>
+                <li src='posts/personal-page.html' style='padding:10px;margin:0px'><div style='margin:0;padding:0'><a class='post-link'><p class='load-post-title'></p></a></div></li>
+            </ul>
+        </section>
+
 
 
     </div>
