--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180629_143535-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a href='/about.html' style='font-family:""noto-eng-b","noto-kor-b"";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a href='/about.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(255,255,164)'>
                 ABOUT</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20190814-sac2019.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a href='/resume.html' style='font-family:""noto-eng-b","noto-kor-b"";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a href='/resume.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(180,180,230)'>
                 RESUME</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180922_183635-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a href='/posts.html' style='font-family:""noto-eng-b","noto-kor-b"";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a href='/posts.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(200,255,200)'>
                 POSTS</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180519-hello-min.JPG' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a href='/contact.html' style='font-family:""noto-eng-b","noto-kor-b"";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a href='/contact.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(159,159,159)'>
                 CONTACT</a>
         </section>
