--- a/index.html
+++ b/index.html
@@ -24,19 +24,26 @@
         <div class='_profile'>
             <a style='font-size:25pt'>
                 <img src='assets/imgs/profile-picture.png' style='width:160px;position:relative;margin:auto'>
-                Jai Hyun Park
+                <p class='eng'>Jai Hyun Park</p>
+                <p class='kor'>박 재 현</p>
             </a>
-            <p>
-                <b style='font-size:20pt'>Under <br> Construction</b> <br><br>
+            <p class='eng'>
+                <b style='font-size:20pt'>Under <br> Construction</b>
             </p>
-        </adiv>
+            <p class='kor'>
+                <b style='font-size:20pt'>작업 중</b>
+            </p>
+        </div>
 
     </header>
 
     <section id='empty-header' class='_track tall-header'></section>
     <div class="_see-more" style='background-color:rgb(24,24,32);'>
-        <div>
+        <div class='eng'>
             See my contents
+        </div>
+        <div class='kor'>
+            더 보기
         </div>
         <img src = 'assets/icons/arrow-down.png'/>
     </div>
@@ -47,30 +54,42 @@
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180629_143535-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a href='/about.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='eng' href='/about.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(255,255,164)'>
                 ABOUT</a>
+            <a class='kor' href='/about.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+                color:rgb(255,255,164)'>
+                소개</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20190814-sac2019.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a href='/resume.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='eng' href='/resume.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(180,180,230)'>
-                RESUME</a>
+                RÉSUMÉ</a>
+            <a class='kor' href='/resume.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+                color:rgb(180,180,230)'>
+                이력</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180922_183635-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a href='/posts.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='eng' href='/posts.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(200,255,200)'>
                 POSTS</a>
+            <a class='kor' href='/posts.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+                color:rgb(200,255,200)'>
+                글들</a>
         </section>
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180519-hello-min.JPG' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a href='/contact.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='eng' href='/contact.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(159,159,159)'>
                 CONTACT</a>
+            <a class='kor' href='/contact.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+                color:rgb(159,159,159)'>
+                연락</a>                
         </section>
 
         <!-- <section id='load-about-glance' class='_track' style='padding:0px 40px;'></section>
