--- a/posts.html
+++ b/posts.html
@@ -23,18 +23,27 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <a href='/posts.html' style='color:rgb(200,255,200)'>
+            <a class='eng' href='/posts.html' style='color:rgb(200,255,200)'>
                 POSTS
             </a>
-            <p>
+            <a class='kor' href='/posts.html' style='color:rgb(200,255,200)'>
+                글들
+            </a>
+            <p class='eng'>
                 What's in my mind?
             </p>
-        </adiv>
+            <p class='kor'>
+                나의 생각들
+            </p>
+        </div>
 
     </header>
     <div class="_see-more">
-        <div>
+        <div class='eng'>
             See more details!
+        </div>
+        <div class='kor'>
+            더 보기
         </div>
         <img src = 'assets/icons/arrow-down.png'/>
     </div>
@@ -55,26 +64,15 @@
         <section class='_track post-section wide-piece' style='padding:50px 0px;margin:0px auto'>
             <div class='load-slice-posts' id='all-posts'>
                 <ul class='load-posts' style='border-top:1pt gray solid;border-bottom:1pt solid gray;padding:10px 0px'>
-                    <li id='posts/he-clustering.html' class='_track'><a class='post-link'><p class='load-post-title'></p></a><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='load-post-abstract'></p><p class='show-post-body'>..More</p><div class='load-post-body big-piece'></div><div class='load-post-body-after'><p class='hide-post-body'>Hide</p><a class='post-link'>Go to the post</a></div></li>
-                    <li id='posts/personal-page.html' class='_track'><a class='post-link'><p class='load-post-title'></p></a><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='load-post-abstract'></p><p class='show-post-body'>..More</p><div class='load-post-body big-piece'></div><div class='load-post-body-after'><p class='hide-post-body'>Hide</p><a class='post-link'>Go to the post</a></div></li>
+                    <li id='posts/he-clustering.html' class='_track'><a class='post-link'><p class='load-post-title'>Error</p></a><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='show-post-abstract'>..More</p><div class='load-post-abstract'>-</div><div class='load-post-abstract-after'><p class='hide-post-abstract'>Hide</p><a class='post-link'>Go to the post</a></div></li>
+                    <li id='posts/personal-page.html' class='_track'><a class='post-link'><p class='load-post-title'>Error</p></a><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='show-post-abstract'>..More</p><div class='load-post-abstract'>-</div><div class='load-post-abstract-after'><p class='hide-post-abstract'>Hide</p><a class='post-link'>Go to the post</a></div></li>
+                    <li id='posts/psdersonal-page.html' class='_track'><a class='post-link'><p class='load-post-title'>Error</p></a><p class='load-post-publish'></p><ul class='load-post-keywords'></ul><p class='show-post-abstract'>..More</p><div class='load-post-abstract'>-</div><div class='load-post-abstract-after'><p class='hide-post-abstract'>Hide</p><a class='post-link'>Go to the post</a></div></li>
                 </ul>
                 <div><div class='first'>≪</div><div class='prev'>＜</div><div class='number'>1/</div><div class='next'>＞</div><div class='last'>≫</div></div>
             </div>
-            <p style='margin-top:50px;font-family:"noto-eng","noto-kor";margin-bottom:0px'>See tags <a href='/tags.html'>HERE</a></p>
+            <p class='eng' style='margin-top:50px;font-family:"noto-eng","noto-kor";margin-bottom:0px;text-align:center'>See tags <a href='/tags.html'>HERE</a></p>
+            <p class='kor' style='margin-top:50px;font-family:"noto-eng","noto-kor";margin-bottom:0px;text-align:center'><a href='/tags.html'>태그</a>들을 모아서 보세요</p>
         </section>
-
-
-        <!-- <section class='_track post-head post-section' id='tags'>
-            <h1>Selected Tags</h1>
-            <div class='narrow-piece hot-tags'>
-                <ul class='post-keywords'>
-                    <li class='post-keyword'><a href='tags.html#page-manual' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
-                        page-manual</a></li>
-                </ul>
-            </div>
-            <p style='width:100%;font-family:"noto-eng","noto-kor";font-size:12pt;'>See more tags at <a href='tags.html'>HERE</a></p>
-        </section>     -->
-
     </div>
 
 
