--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,183 @@
 
     <!-- title -->
     <title>Jai Hyun Park</title>
-    
+<style>
+.gform {
+    position: relative;
+    padding-bottom:40px;
+    margin-bottom:50px!important;
+    border-bottom:1pt rgba(255,255,240,0.5) solid;
+    text-align: left;
+}
+.gform fieldset{
+    border:none;
+    display: block;
+    margin-bottom: 20px;
+}
+.gform fieldset label {
+    position:relative;
+    display: block;
+    width:100%;
+    font-family: 'noto-eng','noto-kor';
+    font-size: 14pt;
+    padding-left: 5px;
+    color: #fffff4;
+    opacity:0.9;
+    margin-bottom: 5px;
+}
+.gform fieldset input:disabled,
+.gform fieldset input {
+    position:relative;
+    display: block;
+    width:100%;
+    height: 50px;
+    border-radius: 10px;
+    border:none;
+    font-family: 'noto-eng-i','noto-kor-i';
+    font-size: 13pt;
+    padding-left:15px;
+    padding-right:15px;
+    color:black;
+    opacity:0.4;
+    transition:0.4s ease-in-out;
+}
+.gform fieldset input:focus {
+    outline:none;
+    opacity:1;
+    transition:0.4s ease-in-out;
+}
+.gform fieldset textarea:disabled,
+.gform fieldset textarea {
+    position:relative;
+    display: block;
+    width:100%;
+    height: 200px;
+    border-radius: 10px;
+    border:none;
+    font-family: 'noto-eng-i','noto-kor-i';
+    font-size: 13pt;
+    padding-top:10px;
+    padding-bottom:10px;
+    padding-left:15px;
+    padding-right:15px;
+    color:black;
+    resize:none;
+    opacity:0.4;
+    transition:0.4s ease-in-out;
+}
+.gform fieldset textarea:focus {
+    outline:none;
+    opacity:1;
+    transition:0.4s ease-in-out;
+}
+.gform button {
+    font-family: 'noto-eng','noto-kor';
+    position:relative;
+    width:150px;
+    font-size: 13pt;
+    border:none;
+    border-radius: 10px;
+    height:50px;
+    color:#fffff4;
+    background-color: #222222;
+    opacity:0.8;
+    margin-top: 10px;
+    left:50%;
+    transform: translateX(-50%);
+}
+.gform button:focus,
+.gform button:hover {
+    outline:none;
+    background: #e2e2da;
+    color:#111111;
+    transition:0.2s ease-in-out;
+    cursor:pointer;
+}
+.gform button:disabled{
+    outline:none;
+    background: #dddddd;
+    color:#777777;
+}
+.gform .honeypot-field {
+    display: none;
+}
+.thankyou_message:before{
+    height:509.675px;
+    line-height: 509.675px;
+    color: black;
+}
+.thankyou_message:after{
+    height:100px;
+    line-height: 100px;
+    color: #fffff4;
+}
+.thankyou_message{
+    height:509.675px;
+    line-height: 509.675px;
+    margin:auto;
+    border-radius: 10px;
+    text-align:center;
+    background-color: #777777;
+    animation: blink;
+    animation-duration: 1.5s;
+    animation-delay: 0.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+.contactlinks{
+    text-align: center;
+    padding-left: 10%;
+    padding-right: 10%;    
+    color: #fffff4;
+    opacity:0.9;
+    font-family: 'noto-eng-i','noto-kor-i';
+    font-size:12pt;
+    margin-bottom: 20px!important;
+}
+.contactlinks a{
+    font-family: 'noto-eng-b','noto-kor-b';
+    color: #fffff4;
+    text-decoration: none;
+    font-size:12pt;
+}
+.contactlinks a:hover{
+    border-bottom: 0.5pt #fffff4 solid;
+    transition: 0.4s linear;
+}
+
+@keyframes blink {
+    0% {
+        color:black;
+        height:509.675px;
+        line-height: 509.675px;
+        background-color: #777777;
+    }
+    10% {
+        background-color: #333333;
+    }
+    20% {
+        background-color: #777777;
+    }
+    30% {
+        background-color: #333333;
+    }
+    40% {
+        background-color: #777777;
+    }
+    60% {
+        height:509.675px;
+        line-height: 509.675px;
+        color:black;
+    }
+    100% {
+        height:100px;
+        line-height: 100px;
+        color:#fffff4;
+        background-color: #777777;
+    }
+}
+
+</style>
 </head>
 <body>
 
@@ -21,20 +197,29 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <a href='/contact.html' style='color:rgb(159,159,159)'>
-                <!-- <img src = "assets/imgs/profile-picture.png" style="width:100%;position:relative;margin:auto"/> -->
+            <a class='eng' href='/contact.html' style='color:rgb(159,159,159)'>
                 CONTACT
             </a>
-            <p>
+            <a class='kor' href='/contact.html' style='color:rgb(159,159,159)'>
+                연락처
+            </a>
+            <p class='eng'>
                 <b style='font-size:25pt'>Contact</b> me with the <b style='font-size:22pt'>links below!</b>
                 <b>Or,</b> You can drop me a <b style='font-size:30pt'>memo!</b>
             </p>
-        </adiv>
+            <p class='kor'>
+                아래의 <b style='font-size:22pt'>링크</b>들을 통해 저에게 <b style='font-size:25pt'>연락</b>하세요. 
+                <b>또는,</b> 언제든 제게 <b style='font-size:30pt'>메모</b>를 남기세요! 
+            </p>
+        </div>
     </header>
 
     <div class="_see-more">
-        <div>
+        <div class='eng'>
             Contact me!
+        </div>
+        <div class='kor'>
+            제게 연락하세요!
         </div>
         <img src = 'assets/icons/arrow-down.png'/>
     </div>
@@ -43,39 +228,48 @@
 
         <div class='section-updown'><div class='section-up'>∧</div><div class='section-top'></div><div class='section-down'>∨</div></div>
 
-        <section class="_content-section _article-section _track" id = "contact" style="background-color:#777777">
-            <h1 style='color:#fffff4'>Contact</h1>
-            <hr style='border-color:#fffff4;margin-bottom:40px'>
+        <section class="_content-section _track" id = "contact" style="background-color:#777777;text-align:center">
+            <h1 class='eng' style='position:relative;font-family:"noto-eng-b","noto-kor-b";font-size:30pt;display:inline-block;color:#fffff4;padding:5px 15px;margin:auto;margin-bottom:50px;border-bottom:1pt solid #fffff4'>Contact</h1>
+            <h1 class='kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:30pt;display:inline-block;color:#fffff4;padding:5px 15px;margin:auto;margin-bottom:50px;border-bottom:1pt solid #fffff4'>메모 남기기</h1>
 
             <form class='gform big-piece' method='POST' data-email='jhyunp@snu.ac.kr'
                 action='https://script.google.com/macros/s/AKfycbwFAZ8Ey5bW-Su2NQVU2AjyMNT-eMz96n0LR3MpMPbzJCgYyGA/exec'
             >
                 <fieldset class='form-elements'>
-                    <label for='name'>Name</label>
+                    <label class='eng' for='name'>Name</label>
+                    <label class='kor' for='name'>이름</label>
                     <input id='name' name='name' required placeholder="" />
                 </fieldset>
                 <fieldset class='form-elements'>
-                    <label for='email'>Email Address</label>
+                    <label class='eng' for='email'>Email Address</label>
+                    <label class='kor' for='email'>이메일</label>
                     <input id='email' name='email' value='' required placeholder="" />
                 </fieldset>
                 <fieldset class='form-elements'>
-                    <label for='message'>Message</label>
+                    <label class='eng' for='message'>Message</label>
+                    <label class='kor' for='message'>메시지</label>
                     <textarea id='message' rows='10' name='message' required placeholder="Tell me what's on your mind!"></textarea>
                 </fieldset>
                 <fieldset class='honeypot-field form-elements'>
                     <input id="honeypot" type="text" name="honeypot" value="" />
                 </fieldset>
-                <button class='form-elements'>Submit</button>
+                <button class='form-elements eng'>Submit</button>
+                <button class='form-elements kor'>제출</button>
                 <div class="thankyou_message" style="display:none;">
                     Thanks for contacting me!
                 </div>
         
             </form>
 
-            <div class='big-piece contactlinks'>
-                You can <a href='mailto:jhyunp@snu.ac.kr'>Email</a> me,
-                friend me on <a href='https://www.facebook.com/jaihyun.park.9'>Facebook</a>,
-                take a look at my pictures on <a href='https://www.instagram.com/jaihyun_park/'>Instagram</a>.
+            <div class='big-piece contactlinks eng'>
+                You can <a href='mailto:jhyunp@snu.ac.kr'>Email</a> me and
+                friend me on <a href='https://www.facebook.com/jaihyun.park.9'>Facebook</a>.
+                <!-- take a look at my pictures on <a href='https://www.instagram.com/jaihyun_park/'>Instagram</a>. -->
+            </div>                    
+            <div class='big-piece contactlinks kor'>
+                저에게 <a href='mailto:jhyunp@snu.ac.kr'>이메일</a>하거나,
+                <a href='https://www.facebook.com/jaihyun.park.9'>Facebook</a>으로 친구를 맺으세요.
+                <!-- <a href='https://www.instagram.com/jaihyun_park/'>Instagram</a>에서 사진들을 보세요! -->
             </div>                    
 
             <script data-cfasync="false" src="js/form-submission-handler.js"></script>
